# agentic_example

./: README.md  agent.py  ai.py  main.py  pyproject.toml  structured_outputs.py
demos/effective_questioning/: agent.py  structured_outputs.py
demos/function_planner/: agent.py
demos/simple_rag/: agent.py  search.py  structured_outputs.py
