[tool.poetry]
name = "agentic-ai"
version = "0.1.0"
description = ""
authors = ["David Collien <david@openlearning.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
openai = "^1.59.6"
pydantic = "^2.10.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
